# fmtastic

./: .mailmap  Cargo.toml  changelog.md  license-mit.txt  readme.md  rust-version.sh  use-min-rust-version.sh
.github/workflows/: ci.yml
src/: ballot_box.rs  digits.rs  fraction.rs  integer.rs  lib.rs  outlined.rs  roman.rs  seven_segment.rs  sub_superscript.rs  tally_marks.rs  utils.rs
