[package]
name = "fmtastic"
description = "Format numbers using the unicode characters via the Display trait."
version = "0.1.0"
edition = "2021"
authors = ["Ruben Schmidmeister <ruben.schmidmeister@icloud.com>"]
license = "MIT/Apache-2.0"
readme = "readme.md"
repository = "https://github.com/bash/fmtastic"
homepage = "https://github.com/bash/fmtastic"
keywords = ["unicode", "display", "fraction", "subscript", "superscript"]
categories = ["value-formatting"]
