[package]
name = "fmtastic"
description = "Format numbers using the unicode characters via the Display trait."
version = "0.2.1"
rust-version = "1.75.0"
edition = "2021"
authors = ["Tau"]
license = "Unlicense OR MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/bash/fmtastic"
homepage = "https://github.com/bash/fmtastic"
keywords = ["unicode", "formatting", "fraction", "subscript", "superscript"]
categories = ["value-formatting", "encoding", "no-std"]
exclude = [".github/", ".mailmap", ".gitignore", "*.sh"]
